fixes overflow i think

--- a/style.css
+++ b/style.css
@@ -31,8 +31,7 @@ h4 {
 
 img {
   display: block;
-  max-width: 100%;
-  height: auto;
+  width: 100%;
 }
 
 @media (min-width: 960px) {
